/*
 * $Id: ChangeLog,v 1.847 2003/03/17 04:36:29 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-03-17 12:17 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/win32ole.prg
    ! Fixed GPF when passing an OLE Object as paramater to an OLE Method.

2003-03-17 05:32 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * include/hbcompress.h
  * source/rtl/hbcompress.c
    - Removed zlib specific decl and memory management
    ! Using now hb_xgrab() family instead of malloc/calloc
      (also thread safe).
    % some code cleaning.

2003-03-16 14:17 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * hrbdll.bc
  * source/rtl/regex.c
  * source/rtl/trace.c
    ! Fixed to allow creation of xHarbour DLL and DLL linked applications (BCC55)

2003-03-16 16:05 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/inet.c
    + Added InetStatus() function to get the status of a socket. Currently used
      to know if a socket is active (0) or closed (-1): TODO more status
    ! Put HB_STACK_LOCK/UNLOCK and HB_TEST_CANCEL_ENABLE_ASYN/ DISABLE in
      the right places. Now asynchronous killing of a thread waiting on a socket is
      working ( use KillThread()/jointhread )

  * source/rtl/trpc.prg
    ! Using cleaner cleanup of accepting tread, closing their sockets instead of killing
      them.

2003-03-16 13:56 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/thread.c
    + added internal function hb_getCurrentStackNoError() to find a stack
      or return null if stack were not present. hb_getCurrentStack() was
      primarily meant to be used by HB_VM_STACK macro and thus rose an
      error when called with an invalid th_id.

  * source/rtl/trpc.prg
  * source/rtl/trpccli.prg
    ! Using KillThraed() /JoinThread() combination instead of StopThread()