@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.847 2003/03/17 04:36:29 jonnymind Exp $
+ * $Id: ChangeLog,v 1.848 2003/03/17 20:17:39 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -8,6 +8,12 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2003-03-18 01:35 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
+  * source/vm/inet.c
+    ! Fixed async socket closing under linux. Now closing socket with InetClose
+      will make also select() to return, and so functions waiting forever (as
+      accept) will cleanly return. 
+    
 2003-03-17 12:17 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/rtl/win32ole.prg
     ! Fixed GPF when passing an OLE Object as paramater to an OLE Method.
